# api_rest_controle_financeiro

./: .gitignore  .python-version  app.py  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0a22b46c03a0_criando_tabela_de_despesas.py  85345bcb552b_criando_tabela_de_receita1.py  900b4dedbe5d_criando_tabela_de_despesas.py  b0e970e4ce6d_alterando_data_para_date.py  b526bf1aab24_criando_tabela_de_receita.py  c31ec874072a_criando_tabela_de_receitas.py
src/: app.py  database.py  models.py  schemas.py
src/api/v1/: despesa_controller.py  receita_controller.py
