[tool.poetry]
name = "api-rest-controle-financeiro"
version = "0.1.0"
description = "API Rest para controle financeiro de gastos pessoais"
authors = ["MARCIO RIBEIRO DE OLIVEIRA <marcio.oliveira@trt14.jus.br>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.26.0"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
pydantic-settings = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
